# mlpilot

./: LICENSE  README.md  pyproject.toml  sample_data.csv  test_csv_loading.py
mlbuddy/: __init__.py
mlbuddy/auto/: __init__.py  data.py  trainer.py
mlbuddy/explain/: __init__.py  visualizer.py
mlbuddy/guide/: __init__.py  suggest.py
tests/: test_csv_prep.py
