[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlpilot"
version = "0.1.0"
description = "An ML library that guides beginners step by step"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Mohammed Jaasir", email = "jaasir@example.com" }
]
keywords = ["machine learning", "beginners", "education", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/Mohammedjaasir/mlpilot"